# trade-winds

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
docs/loom/: 01-discovery.md  02-requirements.md  03-architecture.md  04-planning.md  05-contracts-tests-cicd.md  05-remaining-needs.md  06-implementation.md  07-retrospective.md  PROGRESS.md  README.md  pilot-feedback.md
src/: crawler.py  models.py  sleeper_api.py  storage.py
src/config/: config.py
src/crawler/: engine.py
src/integrations/: sleeper.py
src/services/: services.py  sleeper.py
src/storage/: in_memory.py
src/utils/: http.py
tests/: README.md  conftest.py
tests/cli/: test_command_options.py  test_config_errors.py  test_export_rankings.py  test_inspect_commands.py
tests/contracts/: test_alembic_migrations_contract.py  test_app_context_contract.py  test_database_schema_contract.py  test_repository_contracts.py  test_sleeper_client_contract.py
tests/fixtures/rankings/: model_v1_minimal_input.json  model_v1_recency_input.json
tests/fixtures/sleeper/: league_rosters.json  league_users.json  players.json  (+8 more)
tests/integration/: test_crawl_discovery_resume.py  test_full_fixture_workflow.py  test_ranking_comparison.py  test_ranking_generation.py  test_transaction_sync_persistence.py
tests/live/: test_sleeper_live_smoke.py
tests/unit/: test_asset_identity.py  test_confidence_and_outliers.py  test_rate_limiter.py  test_retry_policy.py  test_settings.py  test_transaction_normalizer_add_drop.py  test_transaction_normalizer_trades.py  test_valuation_model_v1.py
(+11 files in other folders)
