[project]
name = "trade-winds"
version = "0.1.0"
description = "Local-first Sleeper trade valuation engine."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.13",
    "sqlalchemy>=2.0",
    "typer>=0.12",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
markers = [
    "contracts: executable service/interface contracts",
    "integration: tests that exercise multiple internal components",
    "live: opt-in tests that call external services",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
